--- a/k8/frontend-deployment.yaml
+++ b/k8/frontend-deployment.yaml
@@ -14,12 +14,12 @@ spec:
     spec:
       containers:
       - name: frontend
-        image: frontend:latest
+        image: frontend:1.0.0
         ports:
-        - containerPort: 3000
+        - containerPort: 80
         env:
         - name: REACT_APP_API_URL
-          value: "http://backend-service:8080"
+          value: "http://backend-service:5000"
 ---
 apiVersion: v1
 kind: Service
@@ -30,6 +30,6 @@ spec:
     app: frontend
   ports:
   - port: 80
-    targetPort: 3000
-  type: LoadBalancer 
+    targetPort: 80
+  type: NodePort 
   
