--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,11 +2,6 @@ FROM python:3.11-slim
 
 WORKDIR /app
 
-# Install system dependencies
-RUN apt-get update && apt-get install -y \
-    build-essential \
-    && rm -rf /var/lib/apt/lists/*
-
 # Copy requirements first to leverage Docker cache
 COPY requirements.txt .
 
@@ -16,12 +11,11 @@ RUN pip install --no-cache-dir -r requirements.txt
 # Copy project files
 COPY . .
 
-# Expose port 5000
-EXPOSE 5000
+# Expose port 8080
+EXPOSE 8080
 
 # Set environment variables
 ENV FLASK_APP=main.py
-ENV FLASK_ENV=production
 
 # Run the application
-CMD ["python", "-m", "flask", "run", "--host=0.0.0.0"] 
+CMD ["python", "-m", "flask", "run", "--host=0.0.0.0", "--port=8080"]
