--- a/k8/frontend-deployment.yaml
+++ b/k8/frontend-deployment.yaml
@@ -20,6 +20,19 @@ spec:
         env:
         - name: REACT_APP_API_URL
           value: "http://backend-service:5000"
+        resources:
+          requests:
+            memory: "64Mi"
+            cpu: "100m"
+          limits:
+            memory: "128Mi"
+            cpu: "200m"
+        livenessProbe:
+          httpGet:
+            path: /
+            port: 80
+          initialDelaySeconds: 15
+          periodSeconds: 20
 ---
 apiVersion: v1
 kind: Service
