Enhance Dockerfiles and Kubernetes configurations; add health checks, resource limits, and non-root user setup

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,26 +2,42 @@ FROM python:3.11-slim
 
 WORKDIR /app
 
-# Install system dependencies
+# Install system dependencies including curl
 RUN apt-get update && apt-get install -y \
     build-essential \
+    curl \
     && rm -rf /var/lib/apt/lists/*
+
+# Add tini for proper process management
+RUN apt-get update && apt-get install -y tini
+
+# Add non-root user
+RUN useradd -r -s /bin/false appuser && \
+    chown -R appuser:appuser /app
 
 # Copy requirements first to leverage Docker cache
 COPY requirements.txt .
-
-# Install Python dependencies
 RUN pip install --no-cache-dir -r requirements.txt
+
+# Add gunicorn to requirements or install it
+RUN pip install gunicorn
 
 # Copy project files
 COPY . .
 
-# Expose port 5000
+# Set environment variables
+ENV FLASK_APP=main.py \
+    FLASK_ENV=production \
+    PYTHONUNBUFFERED=1 \
+    PORT=5000
+
+# Add health check
+HEALTHCHECK --interval=30s --timeout=30s --start-period=5s --retries=3 \
+    CMD curl -f http://localhost:5000/health || exit 1
+
 EXPOSE 5000
 
-# Set environment variables
-ENV FLASK_APP=main.py
-ENV FLASK_ENV=production
+USER appuser
 
-# Run the application
-CMD ["python", "-m", "flask", "run", "--host=0.0.0.0"] 
+ENTRYPOINT ["/usr/bin/tini", "--"]
+CMD ["gunicorn", "--bind", "0.0.0.0:5000", "--workers", "4", "--timeout", "60", "main:app"]
