--- a/k8/backend-deployment.yaml
+++ b/k8/backend-deployment.yaml
@@ -15,17 +15,49 @@ spec:
       containers:
       - name: backend
         image: backend:1.0.0
+        imagePullPolicy: Never
         ports:
         - containerPort: 5000
         env:
         - name: FLASK_APP
           value: "main.py"
+        - name: FLASK_ENV
+          value: "production"
         - name: MONGO_URI
           value: "mongodb+srv://admin:Prince050803@cluster0.nhnrnl4.mongodb.net/project_portal?retryWrites=true&w=majority&appName=Cluster0"
         - name: JWT_SECRET_KEY
           value: "team404notfound"
         - name: JWT_ACCESS_TOKEN_EXPIRES
           value: "3600"
+        resources:
+          limits:
+            cpu: "500m"
+            memory: "512Mi"
+          requests:
+            cpu: "200m"
+            memory: "256Mi"
+        livenessProbe:
+          httpGet:
+            path: /health
+            port: 5000
+          initialDelaySeconds: 30
+          periodSeconds: 10
+        securityContext:
+          runAsNonRoot: true
+          runAsUser: 1000
+          allowPrivilegeEscalation: false
+        readinessProbe:
+          httpGet:
+            path: /health
+            port: 5000
+          initialDelaySeconds: 10
+          periodSeconds: 5
+        startupProbe:
+          httpGet:
+            path: /health
+            port: 5000
+          failureThreshold: 30
+          periodSeconds: 10
 ---
 apiVersion: v1
 kind: Service
@@ -37,5 +69,4 @@ spec:
   ports:
   - port: 5000
     targetPort: 5000
-  type: ClusterIP 
-  
+  type: ClusterIP
