--- a/k8/frontend-deployment.yaml
+++ b/k8/frontend-deployment.yaml
@@ -15,11 +15,37 @@ spec:
       containers:
       - name: frontend
         image: frontend:1.0.0
+        imagePullPolicy: Never
         ports:
         - containerPort: 80
         env:
         - name: REACT_APP_API_URL
-          value: "http://backend-service:5000"
+          value: "http://backend-service.default.svc.cluster.local:5000"
+        - name: NODE_ENV
+          value: "production"
+        resources:
+          limits:
+            cpu: "300m"
+            memory: "256Mi"
+          requests:
+            cpu: "100m"
+            memory: "128Mi"
+        livenessProbe:
+          httpGet:
+            path: /
+            port: 80
+          initialDelaySeconds: 30
+          periodSeconds: 10
+        securityContext:
+          runAsNonRoot: true
+          runAsUser: 101
+          allowPrivilegeEscalation: false
+        readinessProbe:
+          httpGet:
+            path: /
+            port: 80
+          initialDelaySeconds: 10
+          periodSeconds: 5
 ---
 apiVersion: v1
 kind: Service
@@ -31,5 +57,4 @@ spec:
   ports:
   - port: 80
     targetPort: 80
-  type: NodePort 
-  
+  type: NodePort
