--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,27 +1,29 @@
+# Use official Python base image
 FROM python:3.11-slim
+
+# Set environment variables
+ENV PYTHONDONTWRITEBYTECODE 1
+ENV PYTHONUNBUFFERED 1
 
 WORKDIR /app
 
 # Install system dependencies
-RUN apt-get update && apt-get install -y \
-    build-essential \
-    && rm -rf /var/lib/apt/lists/*
-
-# Copy requirements first to leverage Docker cache
-COPY requirements.txt .
+RUN apt-get update && \
+    apt-get install -y --no-install-recommends gcc python3-dev && \
+    rm -rf /var/lib/apt/lists/*
 
 # Install Python dependencies
+COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy project files
+# Copy application
 COPY . .
 
-# Expose port 5000
+# Run as non-root user
+RUN useradd -u 1001 -r -s /sbin/nologin appuser && \
+    chown -R appuser:appuser /app
+USER appuser
+
 EXPOSE 5000
 
-# Set environment variables
-ENV FLASK_APP=main.py
-ENV FLASK_ENV=production
-
-# Run the application
-CMD ["python", "-m", "flask", "run", "--host=0.0.0.0"] 
+CMD ["gunicorn", "--bind", "0.0.0.0:5000", "--workers", "4", "main:app"]
