--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,30 +1,16 @@
-FROM node:18-alpine as build
-
+# Build stage
+FROM node:18-alpine as builder
 WORKDIR /app
-
-# Copy package files
 COPY package*.json ./
-
-# Install dependencies
-RUN npm install
-
-# Copy project files
+RUN npm ci
 COPY . .
-
-# Build the app
+ARG REACT_APP_API_URL
+ENV REACT_APP_API_URL=$REACT_APP_API_URL
 RUN npm run build
 
 # Production stage
-FROM nginx:alpine
-
-# Copy built assets from build stage
-COPY --from=build /app/build /usr/share/nginx/html
-
-# Copy nginx config if you have any custom configuration
-# COPY nginx.conf /etc/nginx/conf.d/default.conf
-
-# Expose port 80
+FROM nginx:1.25-alpine
+COPY --from=builder /app/build /usr/share/nginx/html
+COPY nginx/nginx.conf /etc/nginx/conf.d/default.conf
 EXPOSE 80
-
-# Start nginx
-CMD ["nginx", "-g", "daemon off;"] 
+CMD ["nginx", "-g", "daemon off;"]
